FEV-172-align-mid-RP-text: 1. fix width

--- a/modules/Quiz/resources/css/quiz.css
+++ b/modules/Quiz/resources/css/quiz.css
@@ -803,6 +803,7 @@ ol.second-row{
 }
 
 .reflection-point-question .header-container {
+    width: 100%;
     height: 80%;
     display: table;
 }
